Added dashboard service
